<resources>
    <string name="title_travel" translation_description="The title for the travel screen where user can see the travel details to reach at the venue.">Travel</string>
    <string name="title_info" translation_description="The title for the info screen where user can see various information, such as FAQ and travel info.">Info</string>
    <string name="title_agenda" translation_description="The title for the agenda screen where user can see all the sessions they plan to attend.">Agenda</string>
    <string name="filters" translation_description="The label for the button to filter sessions by their topics, room, and so on.">Filters</string>
    <string name="category_heading_tracks" translation_description="Label in the filters panel above session topics (Android, Cloud, etc.)">Topics</string>
    <string name="category_heading_types" translation_description="Label in the filters panel above event types (Sessions, Codelabs, etc.)">Types</string>
    <string name="clear_all" translation_description="The label for the button to clear all the filter conditions.">Clear all</string>
    <string name="reset" translation_description="The label for the button to reset the filter conditions.">Reset</string>
    <string name="pinned_events_filter_description" translation_description="Message shown when the user toggles the switch to see their pinned events.">Showing only starred events</string>
    <plurals name="filter_event_count" translation_description="A label showing how many events match the current filters">
        <item quantity="one">%1$d Event</item>
        <item quantity="other">%1$d Events</item>
    </plurals>
    <string name="starred_events">Your starred events</string>
    <string name="starred_events_short">Starred</string>
    <string name="session_duration_location" translatable="false">%1s / %2s</string>
    <string name="session_date_duration_location" translatable="false">%1s / %2s / %3s</string>
    <string name="agenda_duration" translatable="false">%1$s – %2$s</string>
    <string name="event_starred" translation_description="The message shown when user adds an event to their schedule.">Event added to your starred items</string>
    <string name="event_unstarred" translation_description="The message shown when user removes an event from their schedule.">Event removed from starred items</string>
    <string name="event_star_error" translation_description="The message shown for an error when user tries to add an event.">Error adding event to starred items</string>
    <string name="reservation_error" translation_description="The message shown for an error when user is trying to reserve a session attendance.">Error making changes to reservation. Wait for previous requests to finish or try again later.</string>
    <string name="reservation_request_succeeded" translation_description="The message shown when user tries to reserve a seat for a session.">Reservation requested.</string>
    <string name="reservation_cancel_succeeded" translation_description="The message shown when user has canceled their reservation for a session.">Reservation canceled: \"&lt;b>%s&lt;/b>.\"</string>
    <string name="reservation_new" translation_description="The message shown when user's reservation is confirmed by the system.">Your seat has been reserved for \"&lt;b>%s&lt;/b>\".</string>
    <string name="reservation_replaced" translation_description="The message shown when user has chosen to replace a reservation for another and it is confirmed by the system.">Event replaced.</string>
    <string name="waitlist_new" translation_description="The message shown when user is added to the waitlist of a session reservation.">You have been waitlisted.</string>
    <string name="waitlist_cancel_succeeded" translation_description="The message shown when user has canceled their reservation and was waitlisted for a session.">Removed from waitlist.</string>
    <string name="got_it" translation_description="The label for dismissing a information messages.">Got it</string>
    <string name="dont_show" translation_description="The label for opting out of in-app notification messages.">Don\'t show</string>
    <string name="reservation_denied_cutoff" translation_description="The message shown when user's reservation is denied because the session starts too soon">Reservation denied: too close to start time.</string>
    <string name="reservation_denied_clash" translation_description="The message shown when user's reservation is denied because they have reserved another event at that time">Reservation denied: clash with another reservation</string>
    <string name="reservation_denied_unknown" translation_description="The message shown when user's reservation is denied because of an unknown error">Reservation denied: unknown error.</string>
    <string name="cancellation_denied_cutoff" translation_description="The message shown when user is trying to cancel a reservation but it's denied because the session starts too soon">Cancellation denied: too close to start time.</string>
    <string name="cancellation_denied_unknown" translation_description="The message shown when user is trying to cancel a reservation but it's denied because of an unknown error">Cancellation denied: unknown error.</string>
    <string name="schedule_filters_empty" translation_description="The message shown when a schedule page is empty because no events match the current filters.">No events today match your current filters.</string>
    <string name="no_dowry_title" translation_description="Header label for no dowry details.">No Dowry</string>
    <string name="no_gift_title" translation_description="Header label for no gift details.">No Gift</string>
    <string name="gift_for_social_cause_title" translation_description="Header label for gift for social cause details.">Gift for Social Cause</string>
    <string name="no_dowry_description" translation_description="Details explaining why dowry should not be taken."><![CDATA[
    <p>Being a part of this weird society, it is difficult to make the earlier generation understand that dowry is not a good practice.
       But unfortunately it is being practiced heavily in India in the name of tradition. Even we have tried to break this tradition and failed miserably.</p>
    <p>Well we are not from those who accept the defeat easily. So the solution we conclude is:
       <br/>I (Chandra Sekhar) will return the dowry after the marriage or donate it for some good cause. I hope, it will come to true soon.</p>
    ]]></string>
    <string name="no_gift_description" translation_description="Details explaining why gifts should not be taken."><![CDATA[
    <p>Gifts are something that never excites me. Now a days we have changed the definition of <b>Shagun</b> completely. So please avoid giving gifts.</p>
    ]]></string>
    <string name="gift_for_social_cause_description" translation_description="Details explaining why we will invest your gifts for some social cause."><![CDATA[
    <p>If you still want to give us some gift, then please do us a favor by sending some money instead of buying a gift (physical good, gift cards, etc.).</p>
    <p>The amount we collect from you all will be invested for some or the other social cause of your choice.</p>
    <p><b>Don\'t worry!!!</b>
    <br/>This will be 100% transparent. Moreover, we will communicate with you before utilizing it for any social cause.</p>
    <p><b>Account Details</b>
    <br/>Account Holder Name - Chandra Sekhar Nayak
    <br/>Account Number - 11357558854
    <br/>IFSC Code - SBIN0001320</p>
    <br/>Account Holder Name - Rilikta Nayak
    <br/>Account Number - 30585713284
    <br/>IFSC Code - SBIN0002112</p>
    <p><b>Pay Using UPI</b>
    <br/><a href="upi://pay?pa=chansek@upi&pn=Chandra Sekhar Nayak&tn=Marriage Gift for Social Cause&cu=INR">Pay to Chandra Sekhar Nayak</a>
    ]]></string>
    <string name="contacts_rourkela_title" translation_description="Header label for contact details when at Rourkela.">Contacts at Rourkela</string>
    <string name="contacts_nabarangpur_title" translation_description="Header label for contact details when at Nabarangpur.">Contacts at Nabarangpur</string>
    <string name="contacts_rourkela_description" translation_description="Instructions on whom to contact for any help at Rourkela."><![CDATA[
    <p>For any concerns or assistance when you are at Rourkela, please do contact with below people:<p/>
    <p>
    <b>Rinku Subudhi</b> - <a href="tel:7008571903">7008571903</a><br/>
    <b>Dipu Nayak</b> - <a href="tel:7008571903">7008571903</a><br/>
    <b>Rilikta Nayak</b> - <a href="tel:7008571903">7008571903</a></p>
    ]]></string>
    <string name="contacts_nabarangpur_description" translation_description="Instructions on whom to contact for any help at Nabarangpur."><![CDATA[
    <p>For any concerns or assistance when you are at Nabarangpur, please do contact with below people:<p/>
    <p>
    <b>Goura Hari Nayak (Rinku)</b> - <a href="tel:9178669143">9178669143</a><br/>
    <b>Krushna Nayak (Chintu)</b> - <a href="tel:9582625907">9582625907</a><br/>
    <b>Chandra Sekhar Nayak</b> - <a href="tel:8792629767">8792629767</a></p>
    ]]></string>
    <string name="rourkela_venue_title" translation_description="Header label for Rourkela venue details and it's directions.">Rourkela Venue</string>
    <string name="nabarangpur_venue_title" translation_description="Header label for Nabarangpur venue details and it's directions.">Nabarangpur Venue</string>
    <string name="bride_home_title" translation_description="Header label for Bride's home address and it's directions.">Bride\'s Home</string>
    <string name="groom_home_title" translation_description="Header label for Groom's home address and it's directions.">Groom\'s Home</string>
    <string name="rourkela_venue_description" translation_description="Instructions on how to find directions to Rourkela venue."><![CDATA[
    <p>Venue for <b>Reception and Dinner</b> is at:<br/>
    Social Home (Community Center),<br/>
    Sector 18,<br/>
    Rourkela<br/></p>
    <p>Find directions on <a href="https://www.google.com/maps/place/22%C2%B015'31.8%22N+84%C2%B051'31.7%22E/@22.258835,84.8566033,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d22.258835!4d84.858792">Google Maps</a></p>
    ]]></string>
    <string name="nabarangpur_venue_description" translation_description="Instructions on how to find directions to Nabarangpur venue."><![CDATA[
    <p>Venue for <b>Reception and Lunch</b> is at:<br/>
    Baibhav Kalyan Mandap,<br/>
    Ghoramunda,<br/>
    Nabarangpur<br/></p>
    <p>Find directions on <a href="https://www.google.com/maps/place/BAIBHAB+Hi-tech+Function+Hall/@19.2268895,82.5418466,17z/data=!3m1!4b1!4m5!3m4!1s0x3a3ab7f58b8ca4a7:0xf51ec33c42ebf08f!8m2!3d19.2268895!4d82.5440353">Google Maps</a></p>
    ]]></string>
    <string name="bride_home_description" translation_description="Instructions on how to find directions to Bride's home."><![CDATA[
    <p><b>Bride\'s home is at:</b><br/>
    Qr No - D/206,<br/>
    Sector-18,<br/>
    Rourkela,<br/>
    Sundargarh (769003)<br/></p>
    <p>Find directions on <a href="https://www.google.com/maps/place/22%C2%B015'31.8%22N+84%C2%B051'31.7%22E/@22.258835,84.8566033,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d22.258835!4d84.858792">Google Maps</a></p>
    ]]></string>
    <string name="groom_home_description" translation_description="Instructions on how to find directions to Groom's home."><![CDATA[
    <p><b>Groom\'s home is at:</b><br/>
    House No - 946,<br/>
    Shyam Shyam Colony,<br/>
    Jamal Colony,<br/>
    Nabarangpur (764059)<br/></p>
    <p>Find directions on <a href="https://www.google.com/maps/place/19%C2%B012'48.8%22N+82%C2%B032'36.5%22E/@19.213566,82.5412683,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d19.213566!4d82.543457">Google Maps</a></p>
    ]]></string>
</resources>