<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2018 Google Inc. All rights reserved.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            style="@style/Widget.AppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:gravity="center"
                android:text="@string/title_travel"
                android:textAppearance="@style/TextAppearance.ADSSched.ToolbarTitle" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/spacing_normal"
            android:paddingBottom="@dimen/spacing_normal"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/list_divider"
                android:orientation="vertical"
                android:showDividers="middle">

                <io.chanse.events.marriage.rich.widget.CollapsibleCard
                    android:id="@+id/rourkela_venue_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardDescription="@string/rourkela_venue_description"
                    app:cardTitle="@string/rourkela_venue_title" />

                <io.chanse.events.marriage.rich.widget.CollapsibleCard
                    android:id="@+id/nabarangpur_venue_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardDescription="@string/nabarangpur_venue_description"
                    app:cardTitle="@string/nabarangpur_venue_title" />

                <io.chanse.events.marriage.rich.widget.CollapsibleCard
                    android:id="@+id/bride_home_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardDescription="@string/bride_home_description"
                    app:cardTitle="@string/bride_home_title" />

                <io.chanse.events.marriage.rich.widget.CollapsibleCard
                    android:id="@+id/groom_home_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardDescription="@string/groom_home_description"
                    app:cardTitle="@string/groom_home_title" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
