<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2018 Google Inc. All rights reserved.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/list_divider"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_normal"
        android:showDividers="middle">

        <io.chanse.events.marriage.rich.widget.CollapsibleCard
            android:id="@+id/no_dowry_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardDescription="@string/no_dowry_description"
            app:cardTitle="@string/no_dowry_title" />

        <io.chanse.events.marriage.rich.widget.CollapsibleCard
            android:id="@+id/no_gift_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardDescription="@string/no_gift_description"
            app:cardTitle="@string/no_gift_title" />

        <io.chanse.events.marriage.rich.widget.CollapsibleCard
            android:id="@+id/gift_for_social_cause_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardDescription="@string/gift_for_social_cause_description"
            app:cardTitle="@string/gift_for_social_cause_title" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
